[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["vinikaviya <vinikaviya.@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.36"
mysql-connector = "^2.2.9"
pymysql = "^1.1.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dateutil = "^2.9.0.post0"
cryptography = "^43.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
